--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
     "otp-generators": "^1.0.3"
